# AdvancedRayTracer

./: CMakeLists.txt  README.md
resources/: box.pov  example.pov  sphere.pov
src/: Camera.cpp  Camera.hpp  Geometry.hpp  Light_Source.cpp  Light_Source.hpp  Parser.cpp  Parser.hpp  Plane.cpp  Plane.hpp  SceneObject.hpp  Sphere.hpp  main.cpp
